--- a/WebContent/styles/main.css
+++ b/WebContent/styles/main.css
@@ -16,33 +16,23 @@ h1 {
 	font-size: 16pt;
 	font-weight: normal; }
 
-/* header */
-/*
-div.header {
-	padding-top: 10px;
-	padding-left: 10px;
-	padding-bottom: 5px;
-	background-color: #571B1D;
-	background-repeat: repeat-x;
-	background-position: left -3px;
-	background-image: url(header-decoration.png); }
+/* footer */
 
-div.header-links {
-	font-weight: bold;
-	padding-left: 5px;
-	padding-top: 3px;
-	padding-bottom: 3px;
-	color: White;
-	background-color: #CA4223; }
+div.footer {
+	border-top: 1px solid #CCCCCC;
+	padding-top: 5px;
+	margin-top: 20px;
+	margin-bottom: 10px;
+	margin-left: 20px;
+	margin-right: 20px; }
 	
-div.header-link {
-	padding: 2px 5px 2px 5px; }
-
-div.header-link-active {
-	padding: 2px 5px 2px 5px;
-	background-color: #571B1D; }
-
-div.header-link a,
-div.header-link-active a {
-	color: White; }
-*/
+div.footer td {
+	vertical-align: top;
+	padding-right: 20px; } 
+	
+a.footer-link {
+	color: #888888;
+	text-decoration: none; }
+	
+a.footer-link:hover {
+	color: #333333; }
