*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1120 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/main.css
+++ b/WebContent/styles/main.css
@@ -36,3 +36,8 @@ a.footer-link {
 	
 a.footer-link:hover {
 	color: #333333; }
+
+div.footer-section {
+	/* border-bottom: 1px dotted #CCCCCC; 
+	padding-bottom: 5px; */
+	margin-bottom: 5px; } 
