*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1121 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/main-menu.css
+++ b/WebContent/styles/main-menu.css
@@ -21,6 +21,7 @@ td.main-menu-section {
 	padding-right: 5px; }
 
 div.main-menu-box {
+	z-index: 99;
 	position: absolute; }
 	
 td.main-menu-box-top-left {
