--- a/WebContent/styles/index.css
+++ b/WebContent/styles/index.css
@@ -5,7 +5,7 @@ div.welcome-band {
 	background-repeat: repeat-x; }
 	
 table.welcome-band {
-	margin-top: 20px;
+	padding-top: 20px;
 	margin-left: 20px; }
 
 div#welcome-image-frame {
