text-align left for result list
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1128 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/database-search-table.css
+++ b/WebContent/styles/database-search-table.css
@@ -34,7 +34,8 @@ tr.grid-row-last {
 tr.grid-row-even:hover,
 tr.grid-row-odd:hover,
 tr.grid-row-last:hover {
-	background-color: #F7EAC7; }
+	background-color: #F7EAC7; 	
+}
 	
 table.multiline-attr-table {
 }
@@ -56,6 +57,12 @@ table.grid-header-right {
 div.grid-header-text-right {
 	padding: 0px; 
 	text-align: right;
+}
+
+
+div.grid-header-text-left {
+	padding: 0px; 
+	text-align: left;
 }
 
 div.grid-header-icon-asc {
