*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1131 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/assessment.css
+++ b/WebContent/styles/assessment.css
@@ -4,7 +4,7 @@ body {
 	background-repeat: repeat-x; }
 	
 div#content {
-	border-top: 5px solid #115676; }
+	}
 	
 td.section-index-right-column {
 	border-left-color: #115676; }
