--- a/WebContent/styles/main-menu.css
+++ b/WebContent/styles/main-menu.css
@@ -159,4 +159,8 @@ table.secondary-bar-help-links {
 
 td.secondary-bar-help-link {
 	padding-left: 10px; }
+	
+td.breadcrumb-separator {
+	padding-left: 5px;
+	padding-right: 5px; }
 
