*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1146 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/database-search-table.css
+++ b/WebContent/styles/database-search-table.css
@@ -61,6 +61,11 @@ div.grid-header-text-right {
 	text-align: right;
 }
 
+div.grid-header-text-left {
+	padding: 0px; 
+	text-align: left;
+}
+
 div.grid-header-icon-asc {
 	margin-right: 5px;
 	padding-right: 15px;
