Fixing images, updates to index
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1154 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/index.css
+++ b/WebContent/styles/index.css
@@ -61,11 +61,11 @@ div#other-links {
 	background-repeat: no-repeat; }
 
 div#other-links a {
-	text-decoration: none;
-	color: Black; }
+	color: #57807B;
+	text-decoration: none; }
 	
 div#other-links a:hover {
-	color: #759F9A; }
+	color: Black; }
 	
 /* map */
 
@@ -106,4 +106,4 @@ div.footer {
 	margin-left: 20px; }
 	
 a.footer-link {
-	color: #96AAA8; }
+	color: #57807B; }
