--- a/WebContent/styles/database-sources.css
+++ b/WebContent/styles/database-sources.css
@@ -3,14 +3,19 @@ table.simple-table {
 	
 td.sources-letter,
 td.sources-letter-first {
-	font-weight: bold;
-	font-size: 12pt;
 	border-bottom: 1px solid Black;
-	padding-left: 5px;
 	padding-bottom: 5px; }	
 
 td.sources-letter {
 	padding-top: 15px; }
+	
+td.sources-letter span, 
+td.sources-letter-first span {
+	padding: 2px 5px 2px 5px;
+	background-color: Black;
+	color: White;
+	font-weight: bold;
+	font-size: 12pt; }
 
 td.sources-country,
 td.sources-country-first {
