--- a/WebContent/styles/database-voyage.css
+++ b/WebContent/styles/database-voyage.css
@@ -1,7 +1,8 @@
 div.detail-title {
 	font-size: 16pt;
 	margin-bottom: 10px;
-	margin-left: 15px; }
+	margin-left: 15px;
+	margin-top: 10px; }
 	
 div.detail-link-back {
 	margin-top: 10px;
