Fixing index pages + some minor fixes
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1200 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/assessment-estimates.css
+++ b/WebContent/styles/assessment-estimates.css
@@ -81,8 +81,9 @@ div.results-panel {
 	padding: 10px;}
 	
 div.estimates-table-options {
+	margin-top: -5px;
 	margin-bottom: 10px;
-	background-color: #D0EFF0;
+	background-color: #E9F7F8;
 	border: 1px solid #115676;
 	padding: 5px 10px 5px 10px;	}
 
