--- a/WebContent/styles/section-index.css
+++ b/WebContent/styles/section-index.css
@@ -1,48 +1,21 @@
-table.section-index-layout {
-	margin-top: 15px;
+div#content {
+	margin-top: 10px;
+	margin-left: 250px;
+	width: 640px; }
+
+h2 {
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
 	margin-left: 15px; }
-	
-table.section-index-layout td {
-	vertical-align: top; }
-	
-td.section-index-left-column {
-	padding-right: 15px;
-	width: 290px; }
 
-td.section-index-right-column {
-	border-left-style: solid;
-	border-left-width: 1px;
-	padding-left: 10px; }
-
-p.section-index-intro {
+p {
 	margin-top: 0.5em;
 	margin-bottom: 0.5em;
 	line-height: 130%;
-	width: 600px;
 	margin-left: 15px; }
+
+ul {
+	line-height: 130%; }
 	
-div.section-index-intro-icon {
-	background-position: 0em 0.2em;
-	background-repeat: no-repeat;
-	margin-top: 2em;
-	margin-left: 15px;
-	padding-left: 60px; }
-
-div.section-index-intro-icon p.section-index-intro {
-	width: 540px; }
-
-div.section-index-intro-icon-title {
-	font-size: 12pt;
-	margin-left: 15px; }
-
-td.section-index-left-column table.box-main-table {
-	width: 280px; }
-
-ul.box {
-	line-height: 130%;
-	padding: 0px;
-	margin: 0px; }
-	
-ul.box li {
-	margin-bottom: 0.5em;
-	margin-left: 15px; }
+ul li {
+	}
