Adding the Acknowledgements and Contact us page
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1210 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/about-info.css
+++ b/WebContent/styles/about-info.css
@@ -25,6 +25,9 @@ h1 {
 	padding: 0px;
 	margin: 0px 0px 10px 0px; }
 
+p {
+	line-height: 140%; }
+
 div.left-menu-box {
 	padding-left: 10px;
 	padding-right: 10px; }
