--- a/WebContent/styles/about-team.css
+++ b/WebContent/styles/about-team.css
@@ -20,7 +20,7 @@ ul#team li ul li {
 ul#team div.group {
 	xcolor: #737E88;
 	font-size: 11pt;
-	font-weight: normal; }
+	font-weight: bold; }
 
 ul#team span.person {
 	color: Black;
