--- a/WebContent/styles/about.css
+++ b/WebContent/styles/about.css
@@ -4,4 +4,11 @@ body {
 	background-repeat: repeat-x; }
 	
 a {
-	color: #5A636B; }
+	color: #5A636B;
+	color: #07A3BE;
+	color: #809EB0;
+	color: #FF6600;
+	color: #4DAFC2;
+	color: #EEDD88; 
+	color: #DDBB22;
+	color: #77AADD; }
