Minor formatting updates in the About section
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1213 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/about-team.css
+++ b/WebContent/styles/about-team.css
@@ -20,7 +20,7 @@ ul#team li ul li {
 ul#team div.group {
 	xcolor: #737E88;
 	font-size: 11pt;
-	font-weight: bold; }
+	font-weight: normal; }
 
 ul#team span.person {
 	color: Black;
