Fixing problems with maps
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1215 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/map.css
+++ b/WebContent/styles/map.css
@@ -2,6 +2,7 @@ div.map-control {
 	margin-left: auto;
 	margin-right: auto;
 	border: 1px solid #4C5966;
+	background-color: #05768A;
 	overflow: visible; }
 
 table.map-tools {
@@ -372,6 +373,7 @@ div.minimap-control-sw {
 	overflow: hidden; }
 	
 div.minimap-frame {
+	background-color: #05768A;
 	position: absolute; }
 	
 div.minimap-toggle-nw-collapsed {
